Closed Bug 854481 Opened 12 years ago Closed 12 years ago

jstypedarray.cpp:2596:35: warning: typedef 'ArrayType' locally defined but not used [-Wunused-local-typedefs]

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

GCC 4.8 build warning: { js/src/jstypedarray.cpp: In static member function 'static JSBool js::ArrayBufferObject::createTypedArrayFromBuffer(JSContext*, unsigned int, JS::Value*)': js/src/jstypedarray.cpp:2596:35: warning: typedef 'ArrayType' locally defined but not used [-Wunused-local-typedefs] } This typedef exists and is used in other functions, e.g. the one right above this one, but it's indeed unused in createTypedArrayFromBuffer, and was when this code was checked in: https://hg.mozilla.org/mozilla-central/rev/5d00c508b09a#l22.492
Attached patch fixSplinter Review
Attachment #729062 - Flags: review?(jwalden+bmo)
Assignee: general → dholbert
Status: NEW → ASSIGNED
Flags: in-testsuite-
Attachment #729062 - Flags: review?(jwalden+bmo) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: