Bug 854481: Remove unused typedef from jstypedarray.cpp. r=Waldo